{
    "name": "InputSystem",
    "maps": [
        {
            "name": "Gameplay",
            "id": "6364e5f5-6c46-4772-87b0-d84be837a397",
            "actions": [
                {
                    "name": "CameraMiddleMouseMovement",
                    "type": "Button",
                    "id": "761d0e4d-e7c2-4bd7-891f-18820a4503f2",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "MouseScroll",
                    "type": "Value",
                    "id": "1e8478af-73d5-468e-87e3-f2222431daa8",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "MousePosition",
                    "type": "Value",
                    "id": "136ea280-aaec-4ba1-94c5-61dc0ac4ac86",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "aa3f12e2-78d9-44c8-8bc8-6bcdb427d204",
                    "path": "<Mouse>/middleButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CameraMiddleMouseMovement",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6a74c268-b02a-4796-a546-8403911fc08b",
                    "path": "Mouse/scroll",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseScroll",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "98e5aaed-751a-4b7a-bac4-cde25992bc74",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MousePosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}